syntax = "proto3";
package bluzelle.curium.crud;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "crud/CrudValue.proto";

option go_package = "github.com/bluzelle/curium/x/crud/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc Read(QueryReadRequest) returns (QueryReadResponse) {
		option (google.api.http).get = "/bluzelle/curium/crud/CrudValue/{uuid}/{key}";
	}
	rpc Keys(QueryKeysRequest) returns (QueryKeysResponse) {
		option (google.api.http).get = "/bluzelle/curium/crud/CrudValue";
	}
}

// this line is used by starport scaffolding # 3
message QueryReadRequest {
	string uuid = 1;
	string key = 2;
}

message QueryReadResponse {
	bytes value = 1;
}

message QueryKeysRequest {
	string uuid = 1;
	cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryKeysResponse {
	repeated string key = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}


